[gd_scene load_steps=14 format=3 uid="uid://cgqapypvkq0q2"]

[ext_resource type="Script" path="res://Scripts/testScene1.gd" id="1_tmt8f"]
[ext_resource type="PackedScene" uid="uid://gosldyeqg71c" path="res://Scenes/Player/player.tscn" id="2_5g8cc"]
[ext_resource type="PackedScene" uid="uid://b5378h7fio6j5" path="res://Scenes/Spawners/brain_spawner.tscn" id="3_mt2s3"]
[ext_resource type="PackedScene" uid="uid://cksh4cpo3gkqc" path="res://Scenes/Spawners/eduardo_spawner.tscn" id="4_5dlfg"]
[ext_resource type="PackedScene" uid="uid://crw4n0o65iv6r" path="res://Scenes/Spawners/dino_spawner.tscn" id="5_lvtiw"]
[ext_resource type="PackedScene" uid="uid://c3uhdeluijb2b" path="res://Scenes/Player/summoner.tscn" id="5_r0rcl"]
[ext_resource type="PackedScene" uid="uid://c2jpxhglrw2gw" path="res://Scenes/Spawners/lettuce_spawner.tscn" id="6_jf3r6"]
[ext_resource type="Script" path="res://Scenes/CanvasLayer.gd" id="6_mmolo"]
[ext_resource type="PackedScene" uid="uid://bdr2jyfx3kn18" path="res://Scenes/pauseMenu.tscn" id="7_32gpc"]
[ext_resource type="PackedScene" uid="uid://upaq8dya7jrt" path="res://Scenes/Inventory.tscn" id="8_pjbfa"]
[ext_resource type="PackedScene" uid="uid://6jaib5wo360c" path="res://Scenes/Inventory/inventory_gui.tscn" id="9_idrhl"]
[ext_resource type="AudioStream" uid="uid://ce5fxk0nniyw5" path="res://Assets/Background music/Magical_Upbeat_Gangs.mp3" id="10_fk5mm"]
[ext_resource type="PackedScene" uid="uid://o0m5u0nfy62q" path="res://Scenes/SaveManager.tscn" id="11_n2esj"]

[node name="TemplateScene" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_tmt8f")

[node name="TileMap" type="TileMap" parent="."]
format = 2

[node name="Player" parent="." instance=ExtResource("2_5g8cc")]
position = Vector2(432, -320)

[node name="BrainSpawner" parent="." instance=ExtResource("3_mt2s3")]
y_sort_enabled = true
position = Vector2(744, -280)
spawn_limit = 2

[node name="EduardoSpawner" parent="." instance=ExtResource("4_5dlfg")]
y_sort_enabled = true
position = Vector2(288, -464)
spawn_limit = 2

[node name="DinoSpawner" parent="." instance=ExtResource("5_lvtiw")]
y_sort_enabled = true
spawn_limit = 2

[node name="LettuceSpawner" parent="." instance=ExtResource("6_jf3r6")]
spawn_limit = 30

[node name="Summoner" parent="." instance=ExtResource("5_r0rcl")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
process_mode = 3
script = ExtResource("6_mmolo")

[node name="PauseMenu" parent="CanvasLayer" instance=ExtResource("7_32gpc")]

[node name="Inventory" parent="CanvasLayer" instance=ExtResource("8_pjbfa")]

[node name="InventoryGui" parent="CanvasLayer" instance=ExtResource("9_idrhl")]
anchors_preset = -1
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -844.0
offset_top = -600.0
offset_right = -509.0
offset_bottom = -562.0
grow_horizontal = 0
grow_vertical = 0

[node name="BGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_fk5mm")
pitch_scale = 0.8
autoplay = true
bus = &"Music"

[node name="SaveManager" parent="." instance=ExtResource("11_n2esj")]
